# lexia-legal

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  skills-lock.json
lexia-agent/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.release  Makefile  README.md  _cython_pydantic_shim.py  config.py  docker-entrypoint.sh  executor.py  fastapi_app.py  legal_graph_agent.py  llm_utils.py  main.py  models.py  out.txt  prompt_loader.py  pyproject.toml  sandbox.py  sitecustomize.py  skill_registry.py
lexia-agent/agent/: __init__.py  chart_async.py  config.py  cte_background.py  cte_fast_path.py  cte_retriever.py  langchain_agent.py  llm_adapter.py  preloop.py  query_clarification.py  streaming.py
lexia-agent/agents/: base_agent.py  challenger_agent.py  consensus_builder.py  finance_agent.py  proposer_agent.py
lexia-agent/api/: __init__.py  sse_streaming.py
lexia-agent/config/: __init__.py  agents_config.yaml  graph_config.yaml  langchain_config.yaml  loader_config.yaml  sandbox_config.yaml  settings.py
lexia-agent/conversation/: history_manager.py
lexia-agent/data/: audit_dashboard_oracle.yaml  audit_dashboard_oracle_env_ca_view.yaml
lexia-agent/factories/: embeddings_factory.py  redis_factory.py
lexia-agent/flows/: __init__.py  agent_flow.py  analysis_flow.py  categorical_distinct_flow.py  chart_flow.py  code_generation_flow.py  code_reuse_flow.py  contrats_audit_prompt.py  cte_profile_chain_generate.py  dataloader_flow.py  debate_flow.py  domain_workflow.py  download_flow.py  dto_cache_flow.py  embedding_agent_flow.py  (+14 more)
(+738 files in other folders)
