[project]
name = "brikz-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.79.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.131.0",
    "groq>=1.0.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "openai>=2.21.0",
    "pandas>=3.0.0",
    "pocketflow==0.0.3",
    "psycopg2-binary>=2.9.10",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyodbc>=5.3.0",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "schedule>=1.2.2",
    "sentence-transformers>=5.2.2",
    "sse-starlette>=3.2.0",
    "tabulate>=0.9.0",
    "uvicorn>=0.34.0",
    "supabase>=2.28.0",
    "pyqvd>=2.3.0",
    "duckdb>=1.5.0",
    "ollama>=0.6.1",
    "oracledb>=3.4.2",
    "cryptography>=42.0.0",
    "openpyxl>=3.1.5",
    "minio>=7.2.0",
    "sqlglot>=27.0.0",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-community>=0.4.2",
    "qdrant-client[fastembed]>=1.12.0",
]

[project.optional-dependencies]
oracle = ["cx-oracle>=8.3.0"]
release = [
    "cython>=3.0.0",
    "setuptools>=70.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
